# pytest-mocker-study

./: .gitignore  Makefile  README.md  pyproject.toml
src/pms/: math.py
tests/: test_doubler.py
