[project]
name = "pytest_mocker_study"
version = "0.0.1"
description = "Pytest Mocker Study"
authors = [
    {name = "Arthur Zopellaro", email = "github@zope.me"},
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff==0.5.4",
  "mypy==1.11.0",
  "pytest==8.3.1",
  "pytest-mock==3.14.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FA102"]
extend-ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]

[tool.mypy]
strict = true
show_error_codes = true
enable_error_code = "ignore-without-code"
exclude = ["build", ".venv"]
